# local-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  config.example.toml  current_state_and_next_steps.md  dynamic_models_fix_summary.md  final_fix_summary.md  implementation_summary.md  proper_dynamic_models_implementation.md  pyproject.toml  test_results_summary.md
.claude/: settings.local.json
.claude/agents/: coder.md  researcher.md  reviewer.md  tester.md
.github/workflows/: release-and-publish.yml  test.yml
docs/: BENCHMARK_CRITERIA.md  DESIGN.md  PROCESS.md  PROGRESS.md  UI_UX_GUIDELINES.md  VISION.md
src/local_ai/: __init__.py  __main__.py  exceptions.py  logging.py
src/local_ai/benchmark/: __init__.py  agentic_runner.py  goose_runner.py  metrics.py  reporter.py  runner.py  schema.py  tasks.py  test_validator.py
src/local_ai/benchmark/recipes/: todo_api_tdd.yaml
src/local_ai/benchmark/tasks/: todo_api.toml  todo_api_tdd.toml
src/local_ai/cli/: __init__.py  benchmark.py  config.py  main.py  models.py  server.py  status.py
src/local_ai/config/: __init__.py  loader.py  schema.py
src/local_ai/hardware/: __init__.py  apple_silicon.py
src/local_ai/models/: __init__.py  huggingface.py  recommender.py  schema.py
src/local_ai/output/: __init__.py  console.py  tables.py
src/local_ai/server/: __init__.py  __main__.py  custom_server.py  health.py  manager.py  welcome.py
src/local_ai/server/templates/: welcome.html
tests/: __init__.py  conftest.py  helpers.py
tests/integration/: __init__.py  test_models_workflow.py  test_server_lifecycle.py
tests/unit/: __init__.py  test_apple_silicon.py  test_benchmark_agentic_runner.py  test_benchmark_cli.py  test_benchmark_cli_comprehensive.py  test_benchmark_metrics.py  test_benchmark_reporter.py  test_benchmark_runner.py  test_benchmark_schema.py  test_benchmark_tasks.py  test_benchmark_test_validator.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_custom_server.py  test_exceptions.py  test_goose_runner.py  test_health.py  test_huggingface.py  test_logging.py  test_main.py  test_models_cli.py  test_models_schema.py  test_output_console.py  test_output_tables.py  test_recommender.py  test_server_cli_logs.py  test_server_manager.py  test_status_cli.py  test_welcome_page.py  test_welcome_page_additional.py
