[project]
name = "local-ai-server"
version = "0.2.0a0"
description = "Offline AI coding assistant for Apple Silicon. Run LLMs locally with OpenAI-compatible API."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
keywords = ["ai", "llm", "mlx", "apple-silicon", "openai", "local", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub>=0.28.0",
    "loguru>=0.7.3",
    "mlx-lm>=0.20.0",
    "mlx-omni-server",
    "openai>=2.11.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings[toml]>=2.12.0",
    "rich>=14.2.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/tumma72/local-ai"
Repository = "https://github.com/tumma72/local-ai"
Issues = "https://github.com/tumma72/local-ai/issues"

[project.scripts]
local-ai = "local_ai.cli.main:app"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "types-psutil>=7.1.3.20251211",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "lib/",
    "tests/",
    "README.md",
    "LICENSE.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.uv.sources]
mlx-omni-server = { path = "lib/mlx-omni-server", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
